attempt to not run github actions on gh-pages branch

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,9 +3,8 @@ name: Node CI
 on:
   push:
     branches:
-      - master
-    branches-ignore:
-      - gh-pages
+      - 'master'
+      - '!gh-pages'
 
 jobs:
   build:
