--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext js,ts,tsx src",
     "lint-fix": "eslint --fix --ext js,ts,tsx src",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build --cname ttc-aalst.be"
   },
   "eslintConfig": {
     "extends": "react-app"
