attempt to fix the failing gh-pages build

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,9 +2,8 @@ name: Node CI
 
 on:
   push:
-    branches:
-      - 'master'
-      - '!gh-pages'
+    branches-ignore:
+      - 'gh-pages'
 
 jobs:
   build:
