--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.1.10",
     "@reduxjs/toolkit": "^2.2.0",
     "classnames": "2.5.1",
     "font-awesome-animation": "0.0.8",
     "moment": "2.30.1",
-    "ms-signalr-client": "^2.2.2",
     "normalize.css": "3.0.3",
     "quill": "^2.0.3",
     "react": "18.3.1",
