--- a/.eslintrc
+++ b/.eslintrc
@@ -62,6 +62,14 @@
     "jsx-a11y/control-has-associated-label": [0],
     "arrow-body-style": 0
   },
+  "overrides": [
+    {
+      "files": ["**/spec/**", "**/test-utils.*"],
+      "rules": {
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+      }
+    }
+  ],
   "settings": {
     "import/resolver": {
       "node": {
