--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/moment": "^2.11.29",
     "@types/node": "12.7.2",
