--- a/package.json
+++ b/package.json
@@ -4,33 +4,17 @@
   "private": false,
   "homepage": "https://ttc-aalst.be",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "tsc && vite build",
     "test": "jest",
-    "eject": "react-scripts eject",
+    "preview": "vite preview",
     "lint": "eslint --ext js,ts,tsx src",
     "lint-fix": "eslint --fix --ext js,ts,tsx src",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --cname ttc-aalst.be"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "deploy": "gh-pages -d dist --cname ttc-aalst.be"
   },
   "license": "MIT",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@microsoft/signalr": "^8.0.7",
@@ -62,7 +46,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/moment": "^2.11.29",
-    "@types/node": "12.7.2",
+    "@types/node": "^20.19.33",
     "@types/quill": "^2.0.14",
     "@types/react": "18.3.1",
     "@types/react-avatar-editor": "13.0.3",
@@ -73,6 +57,7 @@
     "@types/superagent": "4.1.3",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.31.0",
@@ -82,9 +67,9 @@
     "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.82.0",
     "ts-jest": "^29.2.5",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vite": "^6.4.1"
   }
 }
