--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.82.0",
     "ts-jest": "^29.2.5",
-    "typescript": "4.9.5",
+    "typescript": "^5.9.3",
     "vite": "^6.4.1"
   }
 }
