--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc && vite build",
     "test": "jest",
     "preview": "vite preview",
-    "lint": "eslint --ext js,ts,tsx src",
-    "lint-fix": "eslint --fix --ext js,ts,tsx src",
+    "lint": "eslint src",
+    "lint-fix": "eslint --fix src",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist --cname ttc-aalst.be"
   },
@@ -40,6 +40,7 @@
     "superagent": "^3.8.3"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -55,21 +56,17 @@
     "@types/react-redux": "7.1.34",
     "@types/react-router-dom": "5.3.3",
     "@types/superagent": "4.1.3",
-    "@typescript-eslint/eslint-plugin": "6.0.0",
-    "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-react": "7.37.2",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint": "^9",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.82.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0",
     "vite": "^6.4.1"
   }
 }
