--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.1.10",
-    "@reduxjs/toolkit": "^2.2.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "classnames": "2.5.1",
     "font-awesome-animation": "0.0.8",
     "moment": "2.30.1",
@@ -29,16 +29,15 @@
     "quill": "^2.0.3",
     "react": "18.3.1",
     "react-avatar-editor": "13.0.2",
-    "react-bootstrap": "2.10.6",
+    "react-bootstrap": "2.10.10",
     "react-dom": "18.3.1",
     "react-dropzone": "14.3.5",
     "react-ga4": "^2.1.0",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "6.5.0",
-    "react-select": "5.8.3",
+    "react-select": "5.10.2",
     "redux": "^5.0.1",
-    "stacktrace-js": "^2.0.2",
-    "superagent": "^3.8.3"
+    "stacktrace-js": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
@@ -47,25 +46,19 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/moment": "^2.11.29",
     "@types/node": "^20.19.33",
-    "@types/quill": "^2.0.14",
     "@types/react": "18.3.1",
     "@types/react-avatar-editor": "13.0.3",
-    "@types/react-bootstrap": "0.32.37",
     "@types/react-dom": "18.3.1",
-    "@types/react-redux": "7.1.34",
-    "@types/react-router-dom": "5.3.3",
-    "@types/superagent": "4.1.3",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "sass": "^1.82.0",
-    "ts-jest": "^29.2.5",
+    "sass": "^1.97.3",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.0",
     "vite": "^6.4.1"
