--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "moment": "2.30.1",
     "normalize.css": "3.0.3",
     "quill": "^2.0.3",
-    "react": "18.3.1",
+    "react": "^19",
     "react-avatar-editor": "13.0.2",
     "react-bootstrap": "2.10.10",
-    "react-dom": "18.3.1",
-    "react-dropzone": "14.3.5",
+    "react-dom": "^19",
+    "react-dropzone": "^15",
     "react-ga4": "^2.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "6.5.0",
@@ -45,9 +45,9 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.19.33",
-    "@types/react": "18.3.1",
+    "@types/react": "^19",
     "@types/react-avatar-editor": "13.0.3",
-    "@types/react-dom": "18.3.1",
+    "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9",
     "eslint-plugin-react": "^7.37.5",
