--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.19.33",
+    "@types/node": "^25.3.0",
     "@types/react": "^19",
-    "@types/react-avatar-editor": "13.0.3",
+    "@types/react-avatar-editor": "^13.0.4",
     "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^5",
     "eslint": "^9",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -57,7 +57,7 @@
     "sass": "^1.97.3",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.0",
-    "vite": "^6.4.1",
+    "vite": "^7",
     "vitest": "^4.0.18"
   }
 }
