--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "vite",
     "build": "tsc && vite build",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "preview": "vite preview",
     "lint": "eslint src",
     "lint-fix": "eslint --fix src",
@@ -23,8 +24,8 @@
     "@mui/material": "^6.1.10",
     "@reduxjs/toolkit": "^2.11.2",
     "classnames": "2.5.1",
+    "dayjs": "^1.11.19",
     "font-awesome-animation": "0.0.8",
-    "moment": "2.30.1",
     "normalize.css": "3.0.3",
     "quill": "^2.0.3",
     "react": "^19",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
@@ -52,6 +54,7 @@
     "@types/react-avatar-editor": "^13.0.4",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
