--- a/package.json
+++ b/package.json
@@ -41,7 +41,16 @@
     "stacktrace-js": "^2.0.2"
   },
   "overrides": {
-    "@restart/hooks": "^0.6.2"
+    "@restart/hooks": "^0.6.2",
+    "react-avatar-editor": {
+      "react": "$react"
+    },
+    "eslint-plugin-react": {
+      "eslint": "$eslint"
+    },
+    "eslint-plugin-react-hooks": {
+      "eslint": "$eslint"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
@@ -57,7 +66,7 @@
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^10",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.3.0",
     "happy-dom": "^20.6.3",
     "sass": "^1.97.3",
