switch to vite, bun

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,24 +14,20 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v4
+    - uses: oven-sh/setup-bun@v2
       with:
-        node-version: 22
-        cache: 'npm'
+        bun-version: latest
 
-    - run: npm ci
+    - run: bun install --frozen-lockfile
 
     - name: Lint
-      run: npm run lint
+      run: bun run lint
 
     - name: Type check & build
-      run: npm run build
+      run: bun run build
 
     - name: Test with coverage
-      run: npm run test:coverage
-
-    - name: Audit production dependencies
-      run: npm audit --omit=dev --audit-level=high
+      run: bun run test:coverage
 
     - name: Secret detection
       uses: gitleaks/gitleaks-action@v2
