--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "overrides": {
     "@restart/hooks": "^0.6.2",
     "react-avatar-editor": {
-      "react": "$react"
+      "react": "$react",
+      "react-dom": "$react-dom"
     },
     "eslint-plugin-react": {
       "eslint": "$eslint"
